fix: responsive layout problem

--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@
 
 html, body, #root {
   width: 100%;
-  min-width: 100vw;
+  min-width: 100%;
 }
 
 
